--- a/docs/_posts/2025-04-27-week-2.md
+++ b/docs/_posts/2025-04-27-week-2.md
@@ -1,12 +1,13 @@
 ---
-title: Week 1 - Instalación local de Carla Simulator
+title: Week 2 - ROCM con Pytorch, Plant Village DataSet
 categories:
     -weekly Log
 tags:
-    - CARLA 0.9.15
+    - CARLA
     - pytorch
     - ROCM
     - ROS2
+    - Plant Village
 ---
 
 # Entrenamiento de Red Neuronal con PyTorch y ROCm en GPU AMD
